--- a/springboot_demo_01/src/main/resources/application.properties
+++ b/springboot_demo_01/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=8887
 
+github.client.id=1eaff18138a754ff3a28
+github.client.secret=ef70b548f90af94dfd6edf3d3665bc88143d6ec7
+github.client.uri=http://localhost:8887/callback
