--- a/springboot_demo_01/src/main/resources/application.properties
+++ b/springboot_demo_01/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8887
 github.client.id=1eaff18138a754ff3a28
 github.client.secret=ef70b548f90af94dfd6edf3d3665bc88143d6ec7
 github.client.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:h2:~/communityss
+spring.datasource.username=user
+spring.datasource.password=123456
+spring.datasource.driver-class-name=org.h2.Driver
